Intermittent macOS 10.15 dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | Uncaught exception - at :0 - TypeError: Not in fullscreen mode
Categories
(Core :: Audio/Video: cubeb, defect, P5)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox92 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: bradwerth)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: mlaza [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=352260066&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/fR3MV4E-QuuGSe0abjJp9Q/runs/0/artifacts/public/logs/live_backing.log
[task 2021-09-21T17:57:22.843Z] 17:57:22 INFO - TEST-START | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js
[task 2021-09-21T17:57:23.059Z] 17:57:23 INFO - JavaScript error: /opt/worker/tasks/task_163224417049100/build/tests/bin/components/httpd.js, line 2975: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIBinaryOutputStream.writeByteArray]
[task 2021-09-21T17:57:23.159Z] 17:57:23 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 111995300 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:23.820Z] 17:57:23 INFO - GECKO(2928) | JavaScript error: resource://gre/actors/AudioPlaybackParent.jsm, line 24: TypeError: can't access property "audioPlaybackStopped", browser is null
[task 2021-09-21T17:57:24.040Z] 17:57:24 INFO - JavaScript error: /opt/worker/tasks/task_163224417049100/build/tests/bin/components/httpd.js, line 2975: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIBinaryOutputStream.writeByteArray]
[task 2021-09-21T17:57:24.043Z] 17:57:24 INFO - JavaScript error: /opt/worker/tasks/task_163224417049100/build/tests/bin/components/httpd.js, line 2975: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIBinaryOutputStream.writeByteArray]
[task 2021-09-21T17:57:24.166Z] 17:57:24 INFO - GECKO(2928) | [Child 2935, MediaDecoderStateMachine #1] WARNING: 10b146300 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:24.920Z] 17:57:24 INFO - GECKO(2928) | JavaScript error: resource://gre/actors/AudioPlaybackParent.jsm, line 24: TypeError: can't access property "audioPlaybackStopped", browser is null
[task 2021-09-21T17:57:25.290Z] 17:57:25 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 10cab7200 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:27.315Z] 17:57:27 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 111032a00 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:27.657Z] 17:57:27 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 11189b000 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:27.669Z] 17:57:27 INFO - GECKO(2928) | JavaScript error: resource://gre/actors/AudioPlaybackParent.jsm, line 24: TypeError: can't access property "audioPlaybackStopped", browser is null
[task 2021-09-21T17:57:29.435Z] 17:57:29 INFO - JavaScript error: /opt/worker/tasks/task_163224417049100/build/tests/bin/components/httpd.js, line 2975: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIBinaryOutputStream.writeByteArray]
[task 2021-09-21T17:57:29.459Z] 17:57:29 INFO - JavaScript error: /opt/worker/tasks/task_163224417049100/build/tests/bin/components/httpd.js, line 2975: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIBinaryOutputStream.writeByteArray]
[task 2021-09-21T17:57:29.469Z] 17:57:29 INFO - JavaScript error: /opt/worker/tasks/task_163224417049100/build/tests/bin/components/httpd.js, line 2975: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIBinaryOutputStream.writeByteArray]
[task 2021-09-21T17:57:29.563Z] 17:57:29 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 10cab5f00 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:29.786Z] 17:57:29 INFO - GECKO(2928) | JavaScript error: resource:///actors/DOMFullscreenParent.jsm, line 130: Error: TelemetryStopwatch: key "FULLSCREEN_CHANGE_MS" was already initialized
[task 2021-09-21T17:57:29.811Z] 17:57:29 INFO - GECKO(2928) | JavaScript error: resource:///actors/DOMFullscreenParent.jsm, line 100: Error: TelemetryStopwatch: finishing nonexisting stopwatch. Histogram: "FULLSCREEN_CHANGE_MS", key: ""
[task 2021-09-21T17:57:30.086Z] 17:57:30 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 10cab6000 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:30.604Z] 17:57:30 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 10cab5b00 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:31.526Z] 17:57:31 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 11795d600 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:31.835Z] 17:57:31 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 118a8a400 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:32.111Z] 17:57:32 INFO - GECKO(2928) | 2021-09-21 17:57:32.110 firefox[2928:42652] -[CALayer enqueueSampleBuffer:]: unrecognized selector sent to instance 0x1230f8c20
[task 2021-09-21T17:57:32.112Z] 17:57:32 INFO - GECKO(2928) | 2021-09-21 17:57:32.110 firefox[2928:42652] Mozilla has caught an Obj-C exception [NSInvalidArgumentException: -[CALayer enqueueSampleBuffer:]: unrecognized selector sent to instance 0x1230f8c20]
[task 2021-09-21T17:57:32.137Z] 17:57:32 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 118a8a400 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:32.189Z] 17:57:32 INFO - TEST-INFO | started process screencapture
[task 2021-09-21T17:57:32.342Z] 17:57:32 INFO - TEST-INFO | screencapture: exit 0
[task 2021-09-21T17:57:32.342Z] 17:57:32 INFO - Buffered messages logged at 17:57:22
[task 2021-09-21T17:57:32.343Z] 17:57:32 INFO - Entering test bound setupTestingPref
[task 2021-09-21T17:57:32.343Z] 17:57:32 INFO - Leaving test bound setupTestingPref
[task 2021-09-21T17:57:32.344Z] 17:57:32 INFO - Entering test bound testNonAudibleMediaCantActivateControllerButAudibleMediaCan
[task 2021-09-21T17:57:32.344Z] 17:57:32 INFO - open new tab with non eligible media elements
[task 2021-09-21T17:57:32.345Z] 17:57:32 INFO - Console message: [JavaScript Error: "The character encoding of the HTML document was not declared. The document will render with garbled text in some browser configurations if the document contains characters from outside the US-ASCII range. The character encoding of the page must be declared in the document or in the transfer protocol." {file: "https://example.com/browser/dom/media/mediacontrol/tests/browser/file_non_eligible_media.html" line: 0}]
[task 2021-09-21T17:57:32.346Z] 17:57:32 INFO - Buffered messages logged at 17:57:23
[task 2021-09-21T17:57:32.346Z] 17:57:32 INFO - although media is playing but it won't activate controller
[task 2021-09-21T17:57:32.347Z] 17:57:32 INFO - start non eligible media muted
[task 2021-09-21T17:57:32.347Z] 17:57:32 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | true == true -
[task 2021-09-21T17:57:32.347Z] 17:57:32 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | controller is still inactive -
...
[task 2021-09-21T17:57:32.397Z] 17:57:32 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | fullscreen inaudible-captured-media media is able to being controlled -
[task 2021-09-21T17:57:32.397Z] 17:57:32 INFO - leave fullscreen
[task 2021-09-21T17:57:32.397Z] 17:57:32 INFO - Buffered messages finished
[task 2021-09-21T17:57:32.398Z] 17:57:32 INFO - TEST-UNEXPECTED-FAIL | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | Uncaught exception - at :0 - TypeError: Not in fullscreen mode
[task 2021-09-21T17:57:32.398Z] 17:57:32 INFO - Stack trace:
[task 2021-09-21T17:57:32.398Z] 17:57:32 INFO - @chrome://mochitests/content/browser/dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js:204:29
[task 2021-09-21T17:57:32.398Z] 17:57:32 INFO - execute@resource://specialpowers/SpecialPowersSandbox.jsm:141:12
[task 2021-09-21T17:57:32.398Z] 17:57:32 INFO - _spawnTask@resource://specialpowers/SpecialPowersChild.jsm:1656:15
[task 2021-09-21T17:57:32.398Z] 17:57:32 INFO - receiveMessage@resource://specialpowers/SpecialPowersChild.jsm:310:21
[task 2021-09-21T17:57:32.399Z] 17:57:32 INFO - Leaving test bound testNonEligibleMediaEnterFullscreen
[task 2021-09-21T17:57:32.399Z] 17:57:32 INFO - Entering test bound testNonEligibleMediaEnterPIPMode
[task 2021-09-21T17:57:32.400Z] 17:57:32 INFO - open new tab with non eligible media elements
[task 2021-09-21T17:57:32.400Z] 17:57:32 INFO - Console message: [JavaScript Error: "The character encoding of the HTML document was not declared. The document will render with garbled text in some browser configurations if the document contains characters from outside the US-ASCII range. The character encoding of the page must be declared in the document or in the transfer protocol." {file: "https://example.com/browser/dom/media/mediacontrol/tests/browser/file_non_eligible_media.html" line: 0}]
[task 2021-09-21T17:57:32.443Z] 17:57:32 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 118a8b500 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:32.519Z] 17:57:32 INFO - start non eligible media muted
[task 2021-09-21T17:57:32.520Z] 17:57:32 INFO - media entering PIP mode should activate the media controller
[task 2021-09-21T17:57:32.522Z] 17:57:32 INFO - GECKO(2928) | [Child 2935, MediaDecoderStateMachine #1] WARNING: 10adcea00 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:32.572Z] 17:57:32 INFO - GECKO(2928) | must wait for focus
[task 2021-09-21T17:57:32.638Z] 17:57:32 INFO - handle event=activated
[task 2021-09-21T17:57:32.638Z] 17:57:32 INFO - handle event=playbackstatechange
[task 2021-09-21T17:57:32.643Z] 17:57:32 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | PIP muted media is able to being controlled -
[task 2021-09-21T17:57:32.643Z] 17:57:32 INFO - stop PIP mode
[task 2021-09-21T17:57:32.674Z] 17:57:32 INFO - GECKO(2928) | [Child 2935, MediaDecoderStateMachine #1] WARNING: 10adcf200 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:32.676Z] 17:57:32 INFO - start non eligible media volume-0
[task 2021-09-21T17:57:32.677Z] 17:57:32 INFO - media entering PIP mode should activate the media controller
[task 2021-09-21T17:57:32.734Z] 17:57:32 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 118a8b500 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:32.791Z] 17:57:32 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | PIP volume-0 media is able to being controlled -
[task 2021-09-21T17:57:32.792Z] 17:57:32 INFO - stop PIP mode
[task 2021-09-21T17:57:32.809Z] 17:57:32 INFO - GECKO(2928) | [Child 2935, MediaDecoderStateMachine #1] WARNING: 10adce900 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:32.814Z] 17:57:32 INFO - start non eligible media silent-audio-track
[task 2021-09-21T17:57:32.815Z] 17:57:32 INFO - media entering PIP mode should activate the media controller
[task 2021-09-21T17:57:32.870Z] 17:57:32 INFO - GECKO(2928) | must wait for focus
[task 2021-09-21T17:57:32.939Z] 17:57:32 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | PIP silent-audio-track media is able to being controlled -
[task 2021-09-21T17:57:32.939Z] 17:57:32 INFO - stop PIP mode
[task 2021-09-21T17:57:32.962Z] 17:57:32 INFO - start non eligible media no-audio-track
[task 2021-09-21T17:57:32.963Z] 17:57:32 INFO - media entering PIP mode should activate the media controller
[task 2021-09-21T17:57:33.015Z] 17:57:33 INFO - GECKO(2928) | must wait for focus
[task 2021-09-21T17:57:33.066Z] 17:57:33 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 10cab5700 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:33.082Z] 17:57:33 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | PIP no-audio-track media is able to being controlled -
[task 2021-09-21T17:57:33.082Z] 17:57:33 INFO - stop PIP mode
[task 2021-09-21T17:57:33.102Z] 17:57:33 INFO - GECKO(2928) | [Child 2935, MediaDecoderStateMachine #1] WARNING: 10ad5d000 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:33.103Z] 17:57:33 INFO - start non eligible media short-duration
[task 2021-09-21T17:57:33.104Z] 17:57:33 INFO - media entering PIP mode should activate the media controller
[task 2021-09-21T17:57:33.156Z] 17:57:33 INFO - GECKO(2928) | must wait for focus
[task 2021-09-21T17:57:33.221Z] 17:57:33 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | PIP short-duration media is able to being controlled -
[task 2021-09-21T17:57:33.221Z] 17:57:33 INFO - stop PIP mode
[task 2021-09-21T17:57:33.251Z] 17:57:33 INFO - start non eligible media inaudible-captured-media
[task 2021-09-21T17:57:33.252Z] 17:57:33 INFO - media entering PIP mode should activate the media controller
[task 2021-09-21T17:57:33.307Z] 17:57:33 INFO - GECKO(2928) | must wait for focus
[task 2021-09-21T17:57:33.380Z] 17:57:33 INFO - GECKO(2928) | [Child 2932, MediaDecoderStateMachine #1] WARNING: 10cab7000 Could not set cubeb stream name.: file /builds/worker/checkouts/gecko/dom/media/AudioStream.cpp:367
[task 2021-09-21T17:57:33.387Z] 17:57:33 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | PIP inaudible-captured-media media is able to being controlled -
[task 2021-09-21T17:57:33.387Z] 17:57:33 INFO - stop PIP mode
[task 2021-09-21T17:57:33.389Z] 17:57:33 INFO - remove tab
[task 2021-09-21T17:57:33.389Z] 17:57:33 INFO - wait until finishing close tab wrapper
[task 2021-09-21T17:57:33.417Z] 17:57:33 INFO - GECKO(2928) | JavaScript error: resource://gre/actors/AudioPlaybackParent.jsm, line 24: TypeError: can't access property "audioPlaybackStopped", browser is null
[task 2021-09-21T17:57:33.418Z] 17:57:33 INFO - handle event=deactivated
[task 2021-09-21T17:57:33.419Z] 17:57:33 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | First event should be 'activated' -
[task 2021-09-21T17:57:33.419Z] 17:57:33 INFO - TEST-PASS | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | Last event should be 'deactivated' -
[task 2021-09-21T17:57:33.419Z] 17:57:33 INFO - Leaving test bound testNonEligibleMediaEnterPIPMode
[task 2021-09-21T17:57:33.423Z] 17:57:33 INFO - Console message: [JavaScript Error: "TypeError: can't access property "audioPlaybackStopped", browser is null" {file: "resource://gre/actors/AudioPlaybackParent.jsm" line: 24}]
[task 2021-09-21T17:57:33.423Z] 17:57:33 INFO - receiveMessage@resource://gre/actors/AudioPlaybackParent.jsm:24:9
[task 2021-09-21T17:57:33.423Z] 17:57:33 INFO -
[task 2021-09-21T17:57:33.431Z] 17:57:33 INFO - GECKO(2928) | MEMORY STAT | vsize 8147MB | residentFast 353MB | heapAllocated 117MB
[task 2021-09-21T17:57:33.432Z] 17:57:33 INFO - TEST-OK | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | took 10588ms
[task 2021-09-21T17:57:33.432Z] 17:57:33 INFO - Not taking screenshot here: see the one that was previously logged
[task 2021-09-21T17:57:33.433Z] 17:57:33 INFO - TEST-UNEXPECTED-FAIL | dom/media/mediacontrol/tests/browser/browser_media_control_non_eligible_media.js | Found an unexpected tab at the end of test run: https://example.com/browser/dom/media/mediacontrol/tests/browser/file_non_eligible_media.html -
[task 2021-09-21T17:57:33.448Z] 17:57:33 INFO - checking window state
[task 2021-09-21T17:57:33.452Z] 17:57:33 INFO - GECKO(2928) | JavaScript error: resource://gre/actors/AudioPlaybackParent.jsm, line 24: TypeError: can't access property "audioPlaybackStopped", browser is null
[task 2021-09-21T17:57:33.453Z] 17:57:33 ERROR - GECKO(2928) | TEST-UNEXPECTED-FAIL | unknown test url | uncaught exception - ReferenceError: info is not defined at _handleEvent@chrome://mochitests/content/browser/dom/media/mediacontrol/tests/browser/head.js:52:7
[task 2021-09-21T17:57:33.454Z] 17:57:33 INFO - GECKO(2928) | JavaScript error: chrome://mochitests/content/browser/dom/media/mediacontrol/tests/browser/head.js, line 52: ReferenceError: info is not defined
[task 2021-09-21T17:57:33.458Z] 17:57:33 INFO - TEST-START | dom/media/mediacontrol/tests/browser/browser_media_control_playback_state.js
Updated•3 years ago
|
Comment 1•3 years ago
|
||
Bug 1730499 doesn't change the build on macOS, it's Linux-only.
Comment 2•3 years ago
|
||
Potentially unrelated to bug 1730499.
Brad, is this a regression from bug 1653417? But it's unknown why it took almost a day to show up as intermittent failure in CI.
Assignee | ||
Comment 3•3 years ago
|
||
(In reply to Sebastian Hengst [:aryx] (needinfo on intermittent or backout) from comment #2)
Potentially unrelated to bug 1730499.
Brad, is this a regression from bug 1653417? But it's unknown why it took almost a day to show up as intermittent failure in CI.
The related pref was turned on by default a day later in Bug 1731815, so that is a likely correlation. I'll see if I can replicate.
Assignee | ||
Comment 4•3 years ago
|
||
(In reply to Brad Werth [:bradwerth] from comment #3)
(In reply to Sebastian Hengst [:aryx] (needinfo on intermittent or backout) from comment #2)
Brad, is this a regression from bug 1653417? But it's unknown why it took almost a day to show up as intermittent failure in CI.
The related pref was turned on by default a day later in Bug 1731815, so that is a likely correlation. I'll see if I can replicate.
Yes, this is a regression by Bug 1653417 that is only triggered by the pref "gfx.core-animation.specialize-video" being flipped. I can replicate locally and I'll work on a fix.
Updated•3 years ago
|
Assignee | ||
Comment 5•3 years ago
|
||
The nature of the failure is than an attempt to enter fullscreen for one of the media triggers NSInvalidArgumentException: -[CALayer enqueueSampleBuffer:]: unrecognized selector sent to instance
, and then the test fails when it attempts to leave fullscreen.
Assignee | ||
Comment 6•3 years ago
|
||
The mMutatedSpecializeVideo flag may already be set if the fullscreen state
has changed recently. This code change prevents a newly decoded video frame
from overwriting the need to recreate the video layer in such a case.
This change also adds an assert to ensure that the video layer is of the
expected type before enqueueing the sample buffer.
Comment 8•3 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Description
•