Bug 1731859: Prevent decoded video frames from clearing important state bits. r=gfx-reviewers,jrmuizel

The mMutatedSpecializeVideo flag may already be set if the fullscreen state
has changed recently. This code change prevents a newly decoded video frame
from overwriting the need to recreate the video layer in such a case.

This change also adds an assert to ensure that the video layer is of the
expected type before enqueueing the sample buffer.

Differential Revision: https://phabricator.services.mozilla.com/D126421